# LearnNova

./: .gitignore  README.md  app.py  firebase-service-account.json  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts  vite.config.ts  vite.config.ts.timestamp-1760313520190-cae967f8e439.mjs  vite.config.ts.timestamp-1764276398404-cce16f1c81b7a.mjs  vite.config.ts.timestamp-1764619140996-a2fdaea97c47c.mjs
learnnova-db/: create_learnnova_db.py  init_postgres.py  learnnova.db  seed_learnnova_db.py
src/: App.tsx  index.css  main.tsx
src/components/: MarkdownMathRenderer.tsx  MathText.tsx  ProtectedLayout.tsx  ProtectedRoute.tsx  SessionProtectedRoute.tsx
src/components/chat/: ChatWindow.tsx  FloatingChatBubble.tsx  MessageInput.tsx  MessageItem.tsx  MessageList.tsx  ThreadSidebar.tsx  TypingIndicator.tsx
src/components/cosmic/: CosmicBackdrop.tsx  StarField.tsx
src/components/sections/: Features.tsx  Footer.tsx  Hero.tsx
src/components/ui/: navigation.tsx
src/contexts/: AuthContext.tsx
src/data/: studyTips.ts
src/hooks/: useChat.ts
src/lib/: chatApi.ts  chatStorage.ts  clientLog.ts  firebase.ts  math.ts  time.ts
src/pages/: Chat.tsx  Dashboard.tsx  Flashcards.tsx  Index.tsx  LearningResources.tsx  Plan.tsx  PlanResult.tsx  Profile.tsx  Quiz.tsx  Settings.tsx  SignIn.tsx  SignUp.tsx  Study.tsx  StudyGuide.tsx  StudySet.tsx  Summary.tsx  Upload.tsx
src/types/: chat.ts  external.d.ts
