[project]
name = "stellar-study-buddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-core>=2.9.0",
    "google-cloud-vision>=3.10.2",
    "openai>=2.0.0",
    "pillow>=11.3.0",
    "pypdf>=6.1.1",
    "python-dotenv>=1.1.1",
]
